@@ -138,6 +138,7 @@
   % \pgfluamath@install@function@unimplemented{Mod}%
   % \pgfluamath@install@function@unimplemented{real}%
   % \pgfluamath@install@function@unimplemented{notequal}%
+  \pgfluamath@install@function\pgfpointnormalised=\pgfluamathpointnormalised
 }
 
 \def\pgfluamathgetresult#1{%
@@ -216,3 +217,12 @@
 % \pgfluamath@install@function\pgfmathcosh@=\pgfluamathcosh@
 % \pgfluamath@install@function\pgfmathsinh@=\pgfluamathsinh@
 % \pgfluamath@install@function\pgfmathtanh@=\pgfluamathtanh@
+
+\def\pgfluamathpointnormalised#1{%
+  \pgf@process{#1}%
+  \directlua{%
+    pgfluamath.functions.pointnormalised(%
+      \pgf@sys@tonumber{\pgf@x},\pgf@sys@tonumber{\pgf@y})}%
+  \ignorespaces}
+
+\endinput
